@startuml lories.data.access.DataAccess
set namespaceSeparator none
class "Channel" as lories.data.channels.channel.Channel {
  connector: ChannelConnector
  logger: ChannelConnector
  freq: str
  timedelta: pd.Timedelta
  timestamp: pd.Timestamp
  value: Any
  state: ChannelState
  set(timestamp: pd.Timestamp, value: Any, state: Optional[str | ChannelState]) -> None
  is_valid() -> bool
  has_connector(id: Optional[str]) -> bool
  has_logger() -> bool
  from_logger() -> Channel
  to_series(state: bool) -> pd.Series
}
class "ChannelConnector" as lories.data.channels.connector.ChannelConnector {
  id: str
  key: str
  timestamp: pd.Timestamp
  copy() -> ChannelConnector
}
class "Channels" as lories.data.channels.channels.Channels {
  to_frame(unique: bool, states: bool) -> pd.DataFrame
}
class "Resources" as lories.core.resources.Resources {
  copy() -> Resources
  append(resource: Resource)
  extend(resources: Iterable[Resource])
  apply(apply: Callable[[Resource], None]) -> None
  filter(filter: Callable[[Resource], bool]) -> Resources
  groupby(by: str) -> Iterator[Tuple[Any, Collection[R]]]
}
class "Resource" as lories.core.resource.Resource {
  id
  key
  name
  type
  copy() -> Resource
  get(attr: str, default: Optional[Any]) -> Any
}
class "DataAccess" as lories.data.access.DataAccess {
  add(id: str, **configs: Any) -> None
}
class "DataContext" as lories.data.context.DataContext {
  channels: Channels
  filter(filter: Callable[[Channel], bool]) -> Channels
  groupby(by: str) -> List[Tuple[Any, Channels]]
  to_frame() -> pd.DataFrame
}
class "Configurator" as lories.core.configs.configurator.Configurator {
  context: Context
  configs: Configurations
  {abstract}configure(configs: Configurations) -> None
  is_configured() -> bool
  is_enabled() -> bool
}
lories.data.access.DataAccess --|> lories.core.configs.configurator.Configurator
lories.data.access.DataAccess --|> lories.data.context.DataContext
lories.core.resources.Resources - lories.core.resource.Resource : 0..*
lories.data.channels.channel.Channel --|> lories.core.resource.Resource
lories.data.channels.channel.Channel *-- lories.data.channels.connector.ChannelConnector : logger
lories.data.channels.channel.Channel *-- lories.data.channels.connector.ChannelConnector : connector
lories.data.channels.channels.Channels --|> lories.core.resources.Resources
lories.data.channels.channels.Channels - lories.data.channels.channel.Channel : 0..*
lories.data.context.DataContext *-- lories.data.channels.channels.Channels : channels
lories.data.context.DataContext *-- lories.data.channels.channels.Channels : filter()
lories.data.context.DataContext *-- lories.data.channels.channels.Channels : groupby()
@enduml
